--- a/compton.conf
+++ b/compton.conf
@@ -109,18 +109,20 @@ active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
 
-opacity-rule = [ "95:class_g = 'Termite'" ];
+opacity-rule = [ "97:class_g = 'Termite' && focused",
+  "91:class_g = 'Termite' && !focused"];
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = true;
+blur-strength = 12;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
@@ -211,7 +213,7 @@ wintypes:
         # shadow: Give those windows shadow
         shadow = false;
         # opacity: Default opacity for the type of windows.
-        opacity = 0.85;
+        opacity = 0.95;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
