--- a/conky.conf
+++ b/conky.conf
@@ -1,9 +1,10 @@
 conky.config = {
-	alignment = 'tl',
-	gap_x = 25,
-	gap_y = 30,
+	xinerama_head = 1,
+	alignment = 'tr',
+	gap_x = 85,
+	gap_y = 70,
 	background = true,
-	color2 = 'b6aeba',
+	color2 = 'C6AFA0',
 	cpu_avg_samples = 2,
 	default_color = 'F9FAF9',
 	double_buffer = true,
@@ -16,30 +17,37 @@ conky.config = {
 	own_window_transparent = true,
 	update_interval = 1.0,
 	use_xft = true,
+	use_spacer = true,
 }
 conky.text = [[
 ${voffset 8}$color2${font Google Sans:size=18}${time %A}$font\
-${voffset -8}$alignr$color${font Google Sans:size=38}${time %e}$font
-$color${voffset -30}$color${font Google Sans:size=18}${time %b}$font\
-${voffset -3} $color${font Google Sans:size=20}${time %Y}$font$color2$hr
-#
-${voffset 20}${goto 40}${color}CPU${font Google Sans:bold:size=8}$alignr$cpu%
-${voffset 5}${goto 40}$font$color2${top name 1}$alignr$color${top cpu 1}%
-${goto 40}$color2${top name 2}$alignr$color${top cpu 2}%
-${goto 40}$color2${top name 3}$alignr$color${top cpu 3}%
-${goto 40}$color2${top name 4}$alignr$color${top cpu 4}%
-${goto 40}$color2${top name 5}$alignr$color${top cpu 5}%
-${goto 40}$color2${top name 6}$alignr$color${top cpu 6}%
+${voffset -8}$alignr$color${font Google Sans:size=36}${time %e}$font
+$color${voffset -30}$color${font Google Sans:size=16}${time %b}$font\
+${voffset -3}$color${font Google Sans:size=25}${time %Y}$font$color2$hr
+${font Source Code Pro:size=11}
+${goto 30}${color}${execi 1200 python3 /home/overaid/usr/scripts/weather | head -1 | tail -1 }
+${goto 30}${color}${execi 1200 python3 /home/overaid/usr/scripts/weather | head -2 | tail -1 }
+${goto 30}${color}${execi 1200 python3 /home/overaid/usr/scripts/weather | head -3 | tail -1 }
+${goto 30}${color}${execi 1200 python3 /home/overaid/usr/scripts/weather | head -4 | tail -1 }
+${goto 30}${color}${execi 1200 python3 /home/overaid/usr/scripts/weather | head -5 | tail -1 }
+${font google sans:bold:size=12}
+${voffset 10}${goto 40}${color}CPU${font google sans:bold:size=12}$alignr$cpu%
+${voffset 5}${goto 40}$font$color${top name 1}$alignr$color${top cpu 1}%
+${goto 40}$color${top name 2}$alignr$color${top cpu 2}%
+${goto 40}$color${top name 3}$alignr$color${top cpu 3}%
+${goto 40}$color${top name 4}$alignr$color${top cpu 4}%
+${goto 40}$color${top name 5}$alignr$color${top cpu 5}%
+#${goto 40}$color${top name 6}$alignr$color${top cpu 6}%
 
 # ${goto 40}$color2${top name 5}$alignr$color${top cpu 5}%
-#
-${voffset 10}${goto 40}${color}RAM${font Google Sans:bold:size=8}$alignr$mem$font
-${goto 40}${voffset 5}$color2${top_mem name 1}$alignr$color${top_mem mem_res 1}
-${goto 40}$color2${top_mem name 2}$alignr$color${top_mem mem_res 2}
-${goto 40}$color2${top_mem name 3}$alignr$color${top_mem mem_res 3}
-${goto 40}$color2${top_mem name 4}$alignr$color${top_mem mem_res 4}
-${goto 40}$color2${top_mem name 5}$alignr$color${top_mem mem_res 5}
-${goto 40}$color2${top_mem name 6}$alignr$color${top_mem mem_res 6}
+${font google sans:bold:size=12}
+${voffset 5}${goto 40}${color}RAM${font google sans:bold:size=12}$alignr$mem$font
+${goto 40}${voffset 5}$color${top_mem name 1}$alignr$color${top_mem mem_res 1}
+${goto 40}$color${top_mem name 2}$alignr$color${top_mem mem_res 2}
+${goto 40}$color${top_mem name 3}$alignr$color${top_mem mem_res 3}
+${goto 40}$color${top_mem name 4}$alignr$color${top_mem mem_res 4}
+${goto 40}$color${top_mem name 5}$alignr$color${top_mem mem_res 5}
+#${goto 40}$color${top_mem name 6}$alignr$color${top_mem mem_res 6}
 
 # ${goto 40}$color2${top_mem name 5}$alignr$color${top_mem mem_res 5}
 #
