--- a/i3status/config
+++ b/i3status/config
@@ -1,47 +1,10 @@
-# i3status configuration file.
-# see "man i3status" for documentation.
+#!/bin/bash
 
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
+# a shell scipt to prepend i3status with more stuff
 
-general {
-        colors = false
-        interval = 5
-}
-
-#order += "ipv6"
-#order += "disk /"
-#order += "wireless _first_"
-order += "ethernet _first_"
-#order += "battery all"
-order += "cpu_usage"
-order += "tztime local"
-
-wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
-}
-
-ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "Connected %ip "
-        format_down = "E: down "
-}
-
-battery all {
-        format = "%status %percentage %remaining"
-}
-
-tztime local {
-        format = " %A, %B %d  %H:%M:%S "
-}
-
-cpu_usage {
-        format = " CPU %usage "
-}
-
-disk "/" {
-        format = "%free"
-}
+i3status --config ~/.config/i3status/realconfig | while :
+do
+    read line
+    LG=$(setxkbmap -query | awk '/layout/{print $2}') 
+    echo "LG: $LG | $line" || exit 1
+done
