--- a/conf/polybar/config
+++ b/conf/polybar/config
@@ -1,19 +1,20 @@
+;                            _                            _     _
+;      ____                 | |                          | |   | |
+;     / __ \ _ __ ___   __ _| | _____ _ __ ___   ___  ___| |__ | | _______   __
+;    / / _` | '_ ` _ \ / _` | |/ / __| '_ ` _ \ / _ \/ __| '_ \| |/ / _ \ \ / /
+;   | | (_| | | | | | | (_| |   <\__ \ | | | | |  __/\__ \ | | |   < (_) \ V /
+;    \ \__,_|_| |_| |_|\__,_|_|\_\___/_| |_| |_|\___||___/_| |_|_|\_\___/ \_/
+;     \____/
+;                                                    github.com/maksmeshkov/dotfiles 
+;                                                                             - 2020
+
 [colors]
-background = #B2111111
+background = #B2000000
 foreground = ${xrdb:foreground}
 foreground-alt= #528BFF
 black = #000000
-red = ${xrdb:color1}
-green = ${xrdb:color2}
-blue = ${xrdb:color4}
-yellow = ${xrdb:color3}
-magenta = ${xrdb:color5}
-cyan = ${xrdb:color6}
-white = ${xrdb:color7}
-grey = ${xrdb:color8}
-;fg = #f0e1df
-fg = #ffffff
-bg = #0d0d0d
+bg = #ffffff
+fg = #0d0d0d
 
 [settings]
 screenchange-reload = true
@@ -22,410 +23,135 @@ screenchange-reload = true
 margin-top = 3
 margin-bottom = 0
 
-[bar/bottom]
-width = 100%
-height = 25
-offset-y = 1%
-monitor = ${env:MONITOR:}
-;Make bars invisible in full screen
-;enable-ipc = true
-radius = 5.0
-override-redirect = true
-wm-restack = i3
-
-font-0 = Fira Code:pixelsize=10;3
-font-1 = octicons:pixelsize=12;3
-font-2 = Weather Icons:size=10;4
-font-3 = FontAwesome5Free:style=Solid:pixelsize=12;4
-font-4 = FontAwesome5Brands:style=Solid:pixelsize=12;4
-font-5 = MaterialIcons:pixelsize=11;4
-font-6 = Wuncon Siji:pixelsize=11;4
-
-padding-left = 3
-padding-right = 3
-
-background = #000f0f0f
-foreground = ${colors.foreground}
-
-;background = #00000000
-;foreground = ${colors.foreground}
-
-;modules-center = i3stock
-bottom = true
-
 [bar/top]
-width = 160%
-height = 23
+width = 98%
+height = 22
 offset-y = 1%
-monitor = ${env:MONITOR:}
-;Make bars invisible in full screen
-;enable-ipc = true
-
+offset-x = 1%
+monitor = ${env:MONITOR:DP-1}
 override-redirect = true
 wm-restack = i3
 
-font-0 = Fira Code:pixelsize=10;3
-font-1 = octicons:pixelsize=12;3
-font-2 = Weather Icons:size=10;4
-font-3 = FontAwesome5Free:style=Solid:pixelsize=12;4
-font-4 = FontAwesome5Brands:style=Solid:pixelsize=12;4
-font-5 = MaterialIcons:pixelsize=11;4
-font-6 = Wuncon Siji:pixelsize=11;4
+font-0 = Terminus:pixelsize=12;2
+font-1 = MaterialIcons:pixelsize=11;3
+font-2 = Wuncon Siji:pixelsize=11;2
+font-3 = "Fantasque Sans Mono:pixelsize=11;3"
+font-4 = "Iosevka Nerd Font:pixelsize=11;3"
 
-padding-left = 1
-padding-right = 1
-
-background = #000f0f0f
+padding-left = 2
+padding-right = 2
+background = #EEFFFFFF
 foreground = ${colors.foreground}
-
 modules-left = date xkeyboard
 modules-center = i3stock
-modules-right = toggl clock
+modules-right = toggl  btkeyboard light volume clock
+border-top-size = 2
+border-color = #1b401d
 
-
-label-offline =  mpd is offline
-format-online = <label-song>
-format-online-background = ${colors.fg}
-format-online-padding = 2
-
-label-song-foreground = #FFFFFF
-;#151515
+[module/light]
+type = custom/script
+exec = "echo ﱧ"
+click-left = "sh $HOME/Downloads/yeelight-shell-scripts/yeelight-toggle.sh 0"
+format = ﱧ
+format-foreground =  ${colors.fg}
+format-background = #FFCA28
+format-padding = 2
 
 [module/toggl]
 type = custom/script
 exec = "python3 $HOME/.config/polybar/toggl.py"
+click-left = "xdg-open https://toggl.com/app/timer"
+format = <label> 
 interval = 20.0
-
-format = <label>
 format-foreground =  ${colors.fg}
-;#151515
-;#F02E6E
-;format-background = ${colors.bg}
+format-padding = 2
 
-;#00000000 -> transparent
-format-padding = 1
-
-
-
-[module/title]
-type = internal/xwindow
-; Available tags:
-;   <label> (default)
+[module/btkeyboard]
+type = custom/script
+exec = "bash $HOME/.config/polybar/magic-kb_status.sh"
+click-left = "bash /usr/bin/local/kb-reconnect.sh"
 format = <label>
-format-foreground = ${colors.fg}
-format-padding = 4
-
-; Available tokens:
-;   %title%
-; Default: %title%
-label = %title%
-label-maxlen = 50
-
-; Used instead of label when there is no window title
-; Available tokens:
-;   None
-label-empty = Empty
-label-empty-foreground = #707880
-
-
-[module/pulseaudio]
+interval = 5.0
+format-foreground =  ${colors.fg}
+format-background = #FFCA28
+format-padding = 2
+c
+[module/volume]
 type = internal/pulseaudio
-
-; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
-; If not, uses default sink
-sink = alsa_output.pci-0000_12_00.3.analog-stereo
-
-; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
-; Default: true
-use-ui-max = true
-
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
-interval = 5
 format-volume = <ramp-volume> <label-volume>
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-format-background = ${colors.bg}
-format-foreground = ${colors.fg}
-click-right = pavucontrol &
-
+format-volume-padding = 2
+format-volume-foreground = #000000
+format-volume-background = #FFCA28
+label-volume = %percentage%%
+label-muted = "婢"
+label-muted-foreground = #ff0000
+lable-muted-background = #FFCA28
+label-muted-padding = 2
+interval = 5
+use-ui-max = true
+ramp-volume-0 = 奄
+ramp-volume-1 = 奄
+ramp-volume-2 = 奔
+ramp-volume-3 = 奔
+ramp-volume-4 = 墳
+ramp-volume-5 = 墳
+ramp-volume-6 = 墳
 
 [module/xkeyboard]
 type = internal/xkeyboard
-
-; List of indicators to ignore
 blacklist-0 = num lock
 blacklist-1 = scroll lock
-; Available tags:
-;   <label-layout> (default)
-;   <label-indicator> (default)
-format = <label-layout> 
-format-spacing = 0
-
-format-foreground = ${colors.fg}
-; Available tokens:
-;   %layout%
-;   %name%
-;   %number%
-;   %icon%
-; Default: %layout%
 label-layout = %layout%
 label-layout-padding = 2
 label-layout-foreground = ${colors.fg}
-
-; Available tokens:
-;   %name%
-; Default: %name%
-; @deprecated, use label-indicator-on
 label-indicator = %name%
-
-; layout-icon-[0-9]+ = layout;icon
-; Assign each layout an icon that will be available as %icon% token for the
-; <label-layout> tag. The part before ';' will try to match %layout% value.
 layout-icon-default = some-icon
 layout-icon-0 = ch;C
 layout-icon-1 = us;U
-
-
-[module/wifi]
-type = internal/network
-
-;interface = wlp6s0
-interval = 1
-
-label-connected = %{A} %{A:wicd-client &:} %essid%%{A}
-format-connected-foreground = ${colors.black}
-format-connected-background = ${colors.blue}
-format-connected-padding = 2
-
-format-disconnected-padding = 1
-format-disconnected-foreground = ${colors.red}
-format-disconnected-background = ${colors.blue}
-
-label-disconnected = %{A:wicd-client &:} Disconnected%{A}
-
-[module/weather]
-label-padding-left = 0
-type = custom/script
-exec = "sh $HOME/.config/polybar/weather.sh"
-interval = 600
-label-font = 3
-
-format-foreground = ${colors.blue}
-
-label = %output%
-
-[module/xwindow]
-label-padding-left = 1
-type = internal/xwindow
-
-label = %title%
-label-maxlen = 40
-
-format-foreground = ${colors.foreground}
-format-prefix = " "
-format-suffix = " "
-
-format-margin = 5
-
+format = <label-layout> 
+format-spacing = 2
+format-foreground = #FFFFFF
 
 [module/clock]
 type = custom/script
 exec = "sh $HOME/.config/polybar/time.sh"
-interval = 1.0
-
 format = <label>
+interval = 1.0
 format-foreground =  ${colors.fg}
-;#151515
-;#F02E6E
-;format-background = ${colors.bg}
-
-;#00000000 -> transparent
-format-padding = 1
-
+format-padding = 2
 
 [module/date]
-type = internal/date
-
-date =  %d/%m %a
-
+type = custom/script
+exec = ~/.config/polybar/popup-calendar.sh
+click-left = ~/.config/polybar/popup-calendar.sh --popup &
 format = <label>
-format-foreground = ${colors.fg}
-
-label = %date%
-
-
+format-padding = 2
+format-foreground =  ${colors.fg}
 
 [module/i3stock]
 type = internal/i3
-
-; Only show workspaces defined on the same output as the bar
-;
-; Useful if you want to show monitor specific workspaces
-; on different bars
-;
-; Default: false
 pin-workspaces = true
-
-; This will split the workspace name on ':'
-; Default: false
 strip-wsnumbers = true
-
-; Sort the workspaces by index instead of the default
-; sorting that groups the workspaces by output
-; Default: false
-;index-sort = true
-
-; Create click handler used to focus workspace
-; Default: true
-;enable-click = false
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-
-; Wrap around when reaching the first/last workspace
-; Default: true
 wrapping-scroll = false
-
-; Set the scroll cycle direction
-; Default: true
 reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces
-; containing 'code' in the label
-; Default: false
-;fuzzy-match = true
-
-; ws-icon-[0-9]+ = label;icon
-; NOTE: The label needs to match the name of the i3 workspace
-ws-icon-0 = 1;♚
-ws-icon-1 = 2;♛
-ws-icon-2 = 3;♜
-ws-icon-3 = 4;♝
-ws-icon-4 = 5;♞
-ws-icon-default = ♟
-; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
-; you must also define a ws-icon-5.
-
-; Available tags:
-;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
-;   <label-mode> (default)
 format = <label-state> <label-mode>
 
-; Available tokens:
-;   %mode%
-; Default: %mode%
 label-mode = "•"
-label-mode-padding = 2
+label-mode-padding = 4
 label-mode-background = ${colors.bg}
 
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
 label-focused = "×"
-;label-focused-background = ${colors.bg}
-;#3f3f3f
-label-focused-padding = 1
+label-focused-padding = 4
 label-focused-foreground =  ${colors.fg}
-;#d3869b
 
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
 label-unfocused = "•"
-label-unfocused-padding = 1
+label-unfocused-padding = 4
 label-unfocused-foreground = ${colors.fg}
-;label-unfocused-background = ${colors.bg}
-
-;f0e1df
 
 label-visible = "×"
-;label-visible-background = ${colors.bg}
-;#3f3f3f
-label-visible-padding = 1
+label-visible-padding = 4
 label-visible-foreground =  ${colors.fg}
-;#d3869b
 
 label-urgent = "!"
 label-urgent-foreground = ${colors.fg}
-;label-urgent-background = ${colors.bg}
-label-urgent-padding = 2
-
-
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-;format-background = ${colors.background}
-format-background = #FFFFFF
-
-ws-icon-0 = "1;"
-ws-icon-1 = "2;"
-ws-icon-2 = "3;"
-ws-icon-3 = "4;"
-ws-icon-4 = "5;"
-ws-icon-5 = "6;"
-
-;ws-icon-0 = "1;"
-;ws-icon-1 = "2;"
-;ws-icon-2 = "3;"
-;ws-icon-3 = "4;"
-;ws-icon-4 = "5;"
-;ws-icon-5 = "6;"
-;ws-icon-6 = "7;"
-;ws-icon-7 = "8;"
-
-index-sort = true
-wrapping-scroll = true
-strip-wsnumbers = true
-
-;label-focused = ""
-label-focused = "%icon%"
-label-focused-foreground = #FFFFFFFF
-label-focused-background = #00000000
-;${colors.cyan}
-label-focused-padding = 1
-
-;label-unfocused = "!"
-label-unfocused = "%icon%"
-label-unfocused-padding = 1
-label-unfocused-background = #00000000
-;#FFFFFF
-;${colors.grey}
-label-unfocused-foreground = #d3869b
-;${colors.green}
-
-
-label-visible = "%icon%"
-label-visible-padding = 2
-
-[module/ewmh]
-type = internal/xworkspaces
-pin-workspaces = true
-enable-scroll = true
-
-format = <label-state>
-
-label-active = ×
-label-active-foreground = ${colors.foreground}
-label-active-background = #000f0f0f
-label-active-padding = 1
-
-label-empty = •
-label-empty-foreground = ${colors.foreground}
-label-empty-background = #000f0f0f
-label-empty-padding = 1
-
-label-urgent = !
-label-urgent-foreground = ${colors.foreground}
-label-urgent-background = #000f0f0f
-label-urgent-padding = 1
+label-urgent-padding = 4
