--- a/conf/picom.conf
+++ b/conf/picom.conf
@@ -18,8 +18,8 @@ glx-no-rebind-pixmap = true;
 shadow = true;      		# Enabled client-side shadows on windows.
 no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
 shadow-radius = -10;		# The blur radius for shadows. (default 12)
-shadow-offset-x = 8;		# The left offset for shadows. (default -15)
-shadow-offset-y = 8;		# The top offset for shadows. (default -15)
+shadow-offset-x = 13;		# Offset looks really nice when set to half the gap size of i3's "gaps inner" value
+shadow-offset-y = 13;		# The top offset for shadows. (default -15)
 shadow-opacity = 0.3;		# The translucency for shadows. (default .75)
 shadow-exclude = [
  "! name~=''",
