--- a/config/polybar/.config/polybar/modules.ini
+++ b/config/polybar/.config/polybar/modules.ini
@@ -91,9 +91,6 @@ label-layout-padding = 3
 label-layout-foreground = ${colors.fg-one}
 label-layout-background = ${colors.bg-one}
 label-indicator = %icon%
-layout-icon-default = some-icon
-layout-icon-0 = 🇷;R
-layout-icon-1 = 🇬;U
 format = <label-layout> 
 format-spacing = 3
 format-foreground = ${colors.fg-one}
@@ -102,509 +99,12 @@ format-foreground = ${colors.fg-one}
 
 [module/clock]
 type = custom/script
-exec = "date +'%a, %e %b at %R'"
+exec = "date +'%a, %-d %b at %R'"
 format = <label>
 interval = 1.0
 format-foreground =  ${colors.fg-one}
 format-background =  ${colors.bg-one}
 format-padding = 3
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/cpu]
-type = internal/cpu
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 0.5
-
-; Available tags:
-;   <label> (default)
-;   <bar-load>
-;   <ramp-load>
-;   <ramp-coreload>
-;;format = <label> <ramp-coreload>
-format = <label>
-format-prefix = 
-
-; Available tokens:
-;   %percentage% (default) - total cpu load averaged over all cores
-;   %percentage-sum% - Cumulative load on all cores
-;   %percentage-cores% - load percentage for each core
-;   %percentage-core[1-9]% - load percentage for specific core
-label = " %percentage%%"
-
-; Spacing between individual per-core ramps
-;;ramp-coreload-spacing = 1
-;;ramp-coreload-0 = 
-;;ramp-coreload-1 = 
-;;ramp-coreload-2 = 
-;;ramp-coreload-3 = 
-;;ramp-coreload-4 = 
-
-;;ramp-load-0 = 
-;;ramp-load-1 = 
-;;ramp-load-2 = 
-;;ramp-load-3 = 
-;;ramp-load-4 = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/date]
-type = internal/date
-
-; Seconds to sleep between updates
-interval = 1.0
-
-; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-;;date = %Y-%m-%d%
-
-; Optional time format
-time =  %H:%M:%S     %A  %Y-%m-%d%
-
-; if `date-alt` or `time-alt` is defined, clicking
-; the module will toggle between formats
-;;date-alt = %A, %d %B %Y
-time-alt =  %H:%M:%S     %A
-
-; Available tags:
-;   <label> (default)
-format = <label>
-
-; Available tokens:
-;   %date%
-;   %time%
-; Default: %date%
-label = %time%
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/filesystem]
-type = internal/fs
-
-; Mountpoints to display
-mount-0 = /
-;mount-1 = /media/kevin/M.2
-;;mount-2 = /var
-
-; Seconds to sleep between updates
-; Default: 30
-interval = 10
-
-; Display fixed precision values
-; Default: false
-fixed-values = true
-
-; Spacing between entries
-; Default: 2
-spacing = 0
-
-; Available tags:
-;   <label-mounted> (default)
-;   <bar-free>
-;   <bar-used>
-;   <ramp-capacity>
-format-mounted = <label-mounted>
-format-mounted-prefix = " "
-
-; Available tags:
-;   <label-unmounted> (default)
-format-unmounted = <label-unmounted>
-format-unmounted-prefix = 
-
-; Available tokens:
-;   %mountpoint%
-;   %type%
-;   %fsname%
-;   %percentage_free%
-;   %percentage_used%
-;   %total%
-;   %free%
-;   %used%
-; Default: %mountpoint% %percentage_free%%
-label-mounted = " %free%"
-
-; Available tokens:
-;   %mountpoint%
-; Default: %mountpoint% is not mounted
-label-unmounted = %mountpoint%: not mounted
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/github]
-type = internal/github
-
-; Accessing an access token stored in file
-token = f0dce258fabfb63009b19465b2b307fd9f7bebd6
-user = maksmeshkov
-
-; Accessing an access token stored in an environment variable
-;;token = ${env:GITHUB_ACCESS_TOKEN}
-
-; Whether empty notifications should be displayed or not
-empty-notifications = true
-
-; Number of seconds in between requests
-interval = 10
-
-; Available tags:
-;   <label> (default)
-format =  <label>
-
-; Available tokens:
-;   %notifications% (default)
-; Default: Notifications: %notifications%
-label = %notifications%
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/memory]
-type = internal/memory
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 3
-
-; Available tags:
-;   <label> (default)
-;   <bar-used>
-;   <bar-free>
-;   <ramp-used>
-;   <ramp-free>
-;   <bar-swap-used>
-;   <bar-swap-free>
-;   <ramp-swap-used>
-;   <ramp-swap-free>
-format = <label>
-format-prefix = 
-; Available tokens:
-;   %percentage_used% (default)
-;   %percentage_free%
-;   %gb_used%
-;   %gb_free%
-;   %gb_total%
-;   %mb_used%
-;   %mb_free%
-;   %mb_total%
-;   %percentage_swap_used%
-;   %percentage_swap_free%
-;   %mb_swap_total%
-;   %mb_swap_free%
-;   %mb_swap_used%
-;   %gb_swap_total%
-;   %gb_swap_free%
-;   %gb_swap_used%
-
-label = " %mb_used%"
-
-; Only applies if <bar-used> is used
-;;bar-used-indicator =
-;;bar-used-width = 50
-;;bar-used-foreground-0 = #55aa55
-;;bar-used-foreground-1 = #557755
-;;bar-used-foreground-2 = #f5a70a
-;;bar-used-foreground-3 = #ff5555
-;;bar-used-fill = ▐
-;;bar-used-empty = ▐
-;;bar-used-empty-foreground = #444444
-
-; Only applies if <ramp-used> is used
-;;ramp-used-0 = 
-;;ramp-used-1 = 
-;;ramp-used-2 = 
-;;ramp-used-3 = 
-;;ramp-used-4 = 
-
-; Only applies if <ramp-free> is used
-;;ramp-free-0 = 
-;;ramp-free-1 = 
-;;ramp-free-2 = 
-;;ramp-free-3 = 
-;;ramp-free-4 = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/mpd]
-type = internal/mpd
-
-; Host where mpd is running (either ip or domain name)
-; Can also be the full path to a unix socket where mpd is running.
-host = 127.0.0.1
-port = 6601
-;;password = mysecretpassword
-
-; Seconds to sleep between progressbar/song timer sync
-; Default: 1
-interval = 1
-
-; Available tags:
-;   <label-song> (default)
-;   <label-time>
-;   <bar-progress>
-;   <toggle> - gets replaced with <icon-(pause|play)>
-;   <toggle-stop> - gets replaced with <icon-(stop|play)>
-;   <icon-random>
-;   <icon-repeat>
-;   <icon-repeatone> (deprecated)
-;   <icon-single> - Toggle playing only a single song. Replaces <icon-repeatone>
-;   <icon-consume>
-;   <icon-prev>
-;   <icon-stop>
-;   <icon-play>
-;   <icon-pause>
-;   <icon-next>
-;   <icon-seekb>
-;   <icon-seekf>
-format-online =  <label-song>   <icon-prev> <toggle> <icon-next> <bar-progress> <label-time>
-
-;format-playing = ${self.format-online}
-;format-paused = ${self.format-online}
-;format-stopped = ${self.format-online}
-
-; Available tags:
-;   <label-offline>
-;format-offline = <label-offline>
-
-; Available tokens:
-;   %artist%
-;   %album-artist%
-;   %album%
-;   %date%
-;   %title%
-; Default: %artist% - %title%
-label-song =  "%artist% - %title%"
-label-song-maxlen = 80
-label-song-ellipsis = true
-
-; Available tokens:
-;   %elapsed%
-;   %total%
-; Default: %elapsed% / %total%
-label-time = %elapsed% / %total%
-
-; Available tokens:
-;   None
-label-offline = "MPD is offline"
-
-; Only applies if <icon-X> is used
-icon-play = 
-icon-pause = 
-icon-stop = 
-icon-prev = 
-icon-next = 
-icon-seekb = ⏪
-icon-seekf = ⏩
-icon-random = 🔀
-icon-repeat = 🔁
-icon-repeatone = 🔂
-icon-single = 🔂
-icon-consume = ✀
-
-; Used to display the state of random/repeat/repeatone/single
-; Only applies if <icon-[random|repeat|repeatone|single]> is used
-;;toggle-on-foreground = #ff
-;;toggle-off-foreground = #55
-
-; Only applies if <bar-progress> is used
-bar-progress-width = 45
-bar-progress-indicator = |
-bar-progress-fill = -
-bar-progress-empty = -
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-; If you use both a wired and a wireless network, just add 2 module definitions. For example
-[module/wired-network]
-type = internal/network
-interface = enp2s0
-
-[module/wireless-network]
-type = internal/network
-interface = wlp3s0
-
-; Normal Module
-[module/network]
-type = internal/network
-interface = enp2s0
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 1.0
-
-; Test connectivity every Nth update
-; A value of 0 disables the feature
-; NOTE: Experimental (needs more testing)
-; Default: 0
-;ping-interval = 3
-
-; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
-; Minimum output width of upload/download rate
-; Default: 3
-;;udspeed-minwidth = 5
-
-; Accumulate values from all interfaces
-; when querying for up/downspeed rate
-; Default: false
-accumulate-stats = true
-
-; Consider an `UNKNOWN` interface state as up.
-; Some devices have an unknown state, even when they're running
-; Default: false
-unknown-as-up = true
-
-; Available tags:
-;   <label-connected> (default)
-;   <ramp-signal>
-format-connected = <label-connected>
-
-; Available tags:
-;   <label-disconnected> (default)
-format-disconnected = <label-disconnected>
-
-; Available tags:
-;   <label-connected> (default)
-;   <label-packetloss>
-;   <animation-packetloss>
-;;format-packetloss = <animation-packetloss> <label-connected>
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-; Default: %ifname% %local_ip%
-label-connected = " %local_ip%"
-;;label-connected-foreground = #eefafafa
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-; Default: (none)
-label-disconnected = " Not Connected"
-;;label-disconnected-foreground = #66ffffff
-
-; Available tokens:
-;   %ifname%    [wireless+wired]
-;   %local_ip%  [wireless+wired]
-;   %local_ip6% [wireless+wired]
-;   %essid%     [wireless]
-;   %signal%    [wireless]
-;   %upspeed%   [wireless+wired]
-;   %downspeed% [wireless+wired]
-;   %linkspeed% [wired]
-; Default: (none)
-;label-packetloss = %essid%
-;label-packetloss-foreground = #eefafafa
-
-; Only applies if <ramp-signal> is used
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-
-; Only applies if <animation-packetloss> is used
-;;animation-packetloss-0 = ⚠
-;;animation-packetloss-0-foreground = #ffa64c
-;;animation-packetloss-1 = ⚠
-;;animation-packetloss-1-foreground = #000000
-; Framerate in milliseconds
-;;animation-packetloss-framerate = 500
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/temperature]
-type = internal/temperature
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 0.5
-
-; Thermal zone to use
-; To list all the zone types, run 
-; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
-; Default: 0
-thermal-zone = 0
-
-; Full path of temperature sysfs path
-; Use `sensors` to find preferred temperature source, then run
-; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
-; to find path to desired file
-; Default reverts to thermal zone setting
-;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-#hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon3/temp2_input
-
-; Threshold temperature to display warning label (in degrees celsius)
-; Default: 80
-warn-temperature = 80
-
-; Whether or not to show units next to the temperature tokens (°C, °F)
-; Default: true
-units = true
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-format = <ramp> <label>
-
-; Available tags:
-;   <label-warn> (default)
-;   <ramp>
-format-warn = <ramp> <label-warn>
-
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label = %temperature-c%
-
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label-warn = "%temperature-c%"
-label-warn-foreground = ${color.red}
-
-; Requires the <ramp> tag
-; The icon selection will range from 0 to `warn-temperature`
-; with the current temperature as index.
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-;;ramp-foreground = #55
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/title]
-type = internal/xwindow
-
-; Available tags:
-;   <label> (default)
-format = <label>
-;;format-background = ${color.background}
-;;format-padding = 4
-
-; Available tokens:
-;   %title%
-; Default: %title%
-label = %title%
-label-foreground = ${color.green}
-label-maxlen = 100
-
-; Used instead of label when there is no window title
-; Available tokens:
-;   None
-;;label-empty = Arch Linux
-;;label-empty-foreground = #707880
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/bspwm]
 type = internal/bspwm
