--- a/config/picom/.config/picom.config
+++ b/config/picom/.config/picom.config
@@ -1,12 +1,5 @@
-#                            _                            _     _
-#      ____                 | |                          | |   | |
-#     / __ \ _ __ ___   __ _| | _____ _ __ ___   ___  ___| |__ | | _______   __
-#    / / _` | '_ ` _ \ / _` | |/ / __| '_ ` _ \ / _ \/ __| '_ \| |/ / _ \ \ / /
-#   | | (_| | | | | | | (_| |   <\__ \ | | | | |  __/\__ \ | | |   < (_) \ V /
-#    \ \__,_|_| |_| |_|\__,_|_|\_\___/_| |_| |_|\___||___/_| |_|_|\_\___/ \_/
-#     \____/
-#                                                    github.com/maksmeshkov/dotfiles 
-#                                                                             - 2020
+# github.com/mmskv
+# 2021
 
 #  -------------------------- Custom Stuff -------------------------- 
 
@@ -15,8 +8,8 @@ glx-no-rebind-pixmap = true;
 
 #  -------------------------- Fading -------------------------- 
 
-fading = true;			# Fade windows during opacity changes.
-fade-delta = 10;		# The time between steps in a fade in milliseconds. (default 10).
+fading = false;			# Fade windows during opacity changes.
+fade-delta = 4;		# The time between steps in a fade in milliseconds. (default 10).
 fade-in-step = 0.10;		# Opacity change between steps while fading in. (default 0.028).
 fade-out-step = 0.10;		# Opacity change between steps while fading out. (default 0.03).
 
@@ -25,3 +18,5 @@ fade-out-step = 0.10;		# Opacity change between steps while fading out. (default
 inactive-dim = 0.15;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
 mark-wmwin-focused = true;	# Try to detect WM windows and mark them as active.
 detect-client-opacity = true;
+
+# vim: ft=cfg
